[package]
name = "homoapp-native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-ohos = { version = "1.0.0-beta.8", features = ["async", "tokio_full"] }
napi-derive-ohos = { version = "1.0.0-beta.8" }
encoding_rs = "0.8.34"
log = "0.4.22"
grammers-crypto = { path = "../../../../../../grammers/lib/grammers-crypto" }
grammers-client = { path = "../../../../../../grammers/lib/grammers-client" }
grammers-session = { path = "../../../../../../grammers/lib/grammers-session" }
grammers-mtproto = { path = "../../../../../../grammers/lib/grammers-mtproto" }
grammers-mtsender = { path = "../../../../../../grammers/lib/grammers-mtsender" }
grammers-tl-types = { path = "../../../../../../grammers/lib/grammers-tl-types" }
simple_logger = { version = "5.0.0", default-features = false, features = ["colors"] }
ohos-hilog-binding = "0.0.3"
hilog = { path = "../../../../../../hilog" }
env_logger = "0.11.5"
anyhow = "1.0.87"
chrono = { version = "0.4.38", features = ["serde"] }
regex = "1.10.6"
tokio-util = "0.7.12"
sorted-vec2 = "0.1.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
async-std = "1.13.0"
once_cell = "1.19.0"
const_format = "0.2.33"
stdext = "0.3.3"
memmap2 = "0.9.5"
dashmap = "6.1.0"

[patch.crates-io]
grammers-crypto = { path = "../../../../../../grammers/lib/grammers-crypto" }
grammers-client = { path = "../../../../../../grammers/lib/grammers-client" }
grammers-session = { path = "../../../../../../grammers/lib/grammers-session" }
grammers-mtproto = { path = "../../../../../../grammers/lib/grammers-mtproto" }
grammers-mtsender = { path = "../../../../../../grammers/lib/grammers-mtsender" }
grammers-tl-types = { path = "../../../../../../grammers/lib/grammers-tl-types" }

[build-dependencies]
napi-build-ohos = { version = "1.0.0-beta.8" }
regex = "1.10.6"

[profile.release]
lto = true
strip = true

[workspace]
members = [
    "xtask"
]
