[package]
name = "homogrape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "deadlock"
path = "src/main.rs"

[dependencies]
encoding_rs = "0.8.34"
log = "0.4.22"
grammers-crypto = { git = "https://github.com/Lonami/grammers.git" }
grammers-client = { git = "https://github.com/Lonami/grammers.git" }
grammers-session = { git = "https://github.com/Lonami/grammers.git" }
grammers-mtproto = { git = "https://github.com/Lonami/grammers.git" }
grammers-mtsender = { git = "https://github.com/Lonami/grammers.git" }
grammers-tl-types = { git = "https://github.com/Lonami/grammers.git" }
simple_logger = { version = "5.0.0", default-features = false, features = ["colors"] }
env_logger = "0.11.5"
anyhow = "1.0.87"
chrono = { version = "0.4.38", features = ["serde"] }
regex = "1.10.6"
tokio-util = "0.7.12"
sorted-vec2 = "0.1.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
async-std = "1.13.0"
once_cell = "1.19.0"
const_format = "0.2.33"
stdext = "0.3.3"
memmap2 = "0.9.5"
dashmap = "6.1.0"
console-subscriber = "0.4.0"
libc = "0.2.161"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["tracing-log"] }
tokio = { version = "1.14.0", features = ["full", "tracing"] }

[profile.release]
lto = true
strip = true

[workspace]
members = ["xtask"]
